Recent Changes: - Fixed sticky-top navbar - Fixed collapsing navbar - Changed colors - Added logo images/home button images - Added opacity to banner image
To Do:
- Banner
  - Add logo
  - Add phrase
- Finish navbar
  - Add new home button
  - Add active/hover feature
- Finish About Me
  - Add small summary
- Finish Project Examples
  - Add image
  - Small description of projects
- Finish Contact Me
  - Add form for quick email
  - Add bar with links to social media
    - Linkedin
    - Facebook
    - Gmail
    - Etc.

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -7,6 +7,9 @@
 
 
 
+.navbar-default .navbar-nav > .active{
+    background: url(img/Light Buld Blue.png);
+}
 
 
 
